--- a/index.html
+++ b/index.html
@@ -474,7 +474,209 @@
         </div>
     </div>
 
+    <div class="container px-4 py-5 overview">
+        <div class="overview-Right"><h1 class="mb-4">Salesforce Training Course <span
+                class="text">FAQs</span></h1>
 
+            <div class="d-flex flex-column flex-md-row gap-4 py-md-3 flex-wrap align-items-center justify-content-center">
+                <ul class="dropdown position-static d-grid gap-2 p-2 px-0 rounded-0 mx-0 shadow w-100"
+                    data-bs-theme="light">
+                    <li class="d-flex align-items-center"><a class="dropdown-item rounded-0 p-2 fw-medium">Why should I
+                        learn Salesforce from iLearnings?</a>
+                        <svg class="bi bi-chevron-down me-3 svg-pointer" fill="currentColor" height="16"
+                             viewBox="0 0 16 16"
+                             width="16" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708"
+                                  fill-rule="evenodd"/>
+                        </svg>
+                    </li>
+                    <li>
+                        <hr class="dropdown-divider">
+                    </li>
+                    <li class="drop-info p-2">
+                        <p class="dropdown-p">iLearning’s Salesforce Certification Training Course offers a
+                            comprehensive learning approach for mastering developer and administrator skills in
+                            Salesforce. As part of the training, you will learn the fundamentals, Visualforce, Apex
+                            language, dashboard, process automation, and more. The entire program is in line with
+                            Salesforce Developer Certification exams.
+
+                            You will be working on real-time projects and assignments that have high relevance in the
+                            corporate world, and the Salesforce Admin Course Curriculum is designed by industry experts.
+                            Upon completion of the training, you can apply for some of the best jobs in top MNCs around
+                            the world at top salaries. iLearning offers lifetime access to videos, study materials,
+                            24/7 support, and material upgrades to the latest version at no extra fee. Hence, it is
+                            clearly a one-time investment.</p>
+                    </li>
+                    <li>
+                        <hr class="dropdown-divider drop-info">
+                    </li>
+                    <li class="d-flex align-items-center"><a class="dropdown-item rounded-0 p-2 fw-medium">What are the
+                        other courses iLearning offers in the domain of Salesforce?</a>
+                        <svg class="bi bi-chevron-down me-3 svg-pointer" fill="currentColor" height="16"
+                             viewBox="0 0 16 16"
+                             width="16" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708"
+                                  fill-rule="evenodd"/>
+                        </svg>
+                    </li>
+                    <li>
+                        <hr class="dropdown-divider">
+                    </li>
+                    <li class="drop-info p-2">
+                        <p class="dropdown-p"> iLearning offers courses on marketing cloud, platform developer 1 and
+                            2, Apex integration, Salesforce Lightning, and a master’s program in the Salesforce domain.
+                        </p>
+                    </li>
+                    <li>
+                        <hr class="dropdown-divider drop-info">
+                    </li>
+                    <li class="d-flex align-items-center"><a class="dropdown-item rounded-0 p-2 fw-medium"> What is
+                        Salesforce?
+                    </a>
+                        <svg class="bi bi-chevron-down me-3 svg-pointer" fill="currentColor" height="16"
+                             viewBox="0 0 16 16"
+                             width="16" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708"
+                                  fill-rule="evenodd"/>
+                        </svg>
+                    </li>
+                    <li>
+                        <hr class="dropdown-divider">
+                    </li>
+                    <li class="drop-info p-2">
+                        <p class="dropdown-p">This is one of the best customer relationship management (CRM) solutions,
+                            which brings companies and their customers together. This tool is focused on customer
+                            service, marketing automation, analytics, and application development. It was founded on
+                            February 1999 by Marc Benioff.
+                        </p>
+                    </li>
+                    <li>
+                        <hr class="dropdown-divider drop-info">
+                    </li>
+                    <li class="d-flex align-items-center"><a class="dropdown-item rounded-0 p-2 fw-medium">What
+                        are the different types of job positions available after iLearning’s Salesforce Certification
+                        Training Course?</a>
+
+                        <svg class="bi bi-chevron-down me-3 svg-pointer" fill="currentColor" height="16"
+                             viewBox="0 0 16 16"
+                             width="16" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708"
+                                  fill-rule="evenodd"/>
+                        </svg>
+                    </li>
+                    <li>
+                        <hr class="dropdown-divider">
+                    </li>
+                    <li class="drop-info p-2">
+                        <p class="dropdown-p"> Below are some of the popular job roles for this CRM tool:</p>
+                        <ul>
+                            <li>Salesforce admin</li>
+                            <li>Salesforce developer</li>
+                            <li>Salesforce sales executive</li>
+                            <li>Salesforce marketing specialist and Salesforce consultant</li>
+                        </ul>
+                    </li>
+                    <li>
+                        <hr class="dropdown-divider drop-info">
+                    </li>
+                    <li class="d-flex align-items-center"><a class="dropdown-item rounded-0 p-2 fw-medium">What
+                        qualifications are necessary to become a Salesforce Certified administrator and app builder?</a>
+
+                        <svg class="bi bi-chevron-down me-3 svg-pointer" fill="currentColor" height="16"
+                             viewBox="0 0 16 16"
+                             width="16" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708"
+                                  fill-rule="evenodd"/>
+                        </svg>
+                    </li>
+                    <li>
+                        <hr class="dropdown-divider">
+                    </li>
+                    <li class="drop-info p-2">
+                        <p class="dropdown-p">For this, you need to pass Salesforce app builder and Salesforce
+                            administrator certification exams. To do this, follow these steps:</p>
+                        <ul>
+                            <li>Complete iLearning’s Salesforce Training and certification</li>
+                            <li>Gain hands-on experience by working on industry-specific projects</li>
+                            <li>Register for two exams on Salesforce.com</li>
+                            <li>Pass the exams!</li>
+                        </ul>
+                    </li>
+                    <li>
+                        <hr class="dropdown-divider drop-info">
+                    </li>
+                    <li class="d-flex align-items-center"><a class="dropdown-item rounded-0 p-2 fw-medium">What
+                        are the different types of job positions available after iLearning’s Salesforce Certification
+                        Training Course?</a>
+
+                        <svg class="bi bi-chevron-down me-3 svg-pointer" fill="currentColor" height="16"
+                             viewBox="0 0 16 16"
+                             width="16" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708"
+                                  fill-rule="evenodd"/>
+                        </svg>
+                    </li>
+                    <li>
+                        <hr class="dropdown-divider">
+                    </li>
+                    <li class="drop-info p-2">
+                        <p class="dropdown-p"> Below are some of the popular job roles for this CRM tool:</p>
+                        <ul>
+                            <li>Salesforce admin</li>
+                            <li>Salesforce developer</li>
+                            <li>Salesforce sales executive</li>
+                            <li>Salesforce marketing specialist and Salesforce consultant</li>
+                        </ul>
+                    </li>
+                    <li>
+                        <hr class="dropdown-divider drop-info">
+                    </li>
+                    <li class="d-flex align-items-center"><a class="dropdown-item rounded-0 p-2 fw-medium">What
+                        are the top companies hiring Salesforce developers?</a>
+                        <svg class="bi bi-chevron-down me-3 svg-pointer" fill="currentColor" height="16"
+                             viewBox="0 0 16 16"
+                             width="16" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708"
+                                  fill-rule="evenodd"/>
+                        </svg>
+                    </li>
+                    <li>
+                        <hr class="dropdown-divider drop-info">
+                    </li>
+                    <li class="drop-info p-2">
+                        <p class="dropdown-p p-0">
+                            Some of the top companies that hire Salesforce developers are TCS, Accenture, Cognizant,
+                            Capgemini, Infosys, Salesforce, Deloitte, etc.</p>
+                    </li>
+                    <li>
+                        <hr class="dropdown-divider drop-info">
+                    </li>
+                    <li class="d-flex align-items-center"><a class="dropdown-item rounded-0 p-2 fw-medium">What
+                        if I miss a class?</a>
+                        <svg class="bi bi-chevron-down me-3 svg-pointer" fill="currentColor" height="16"
+                             viewBox="0 0 16 16"
+                             width="16" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708"
+                                  fill-rule="evenodd"/>
+                        </svg>
+                    </li>
+                    <li>
+                        <hr class="dropdown-divider drop-info">
+                    </li>
+                    <li class="drop-info p-2">
+                        <p class="dropdown-p p-0">
+                            If you end up missing a class, then you can contact our support team. Our team will further
+                            assist you in scheduling another class for the same topic so that you can catch up with the
+                            rest.
+
+                            Also, all the sessions are recorded and shared with all participants in the learning
+                            management system(LMS). You can refer to these recorded sessions for the missed class.</p>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="overview-left"></div>
+    </div>
     <!--footer-->
     <footer class="py-5">
         <div class="row">
