--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                         prerequisites for taking this
                         Salesforce Certification Course?
                     </a>
-                        <svg class="bi bi-chevron-down me-3 svg-pointer drop-icon" fill="currentColor" height="16"
+                        <svg class="bi bi-chevron-down me-3 svg-pointer drop-icon drop-icon" fill="currentColor" height="16"
                              viewBox="0 0 16 16"
                              width="16" xmlns="http://www.w3.org/2000/svg">
                             <path d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708"
@@ -244,7 +244,7 @@
                         you learn in this Salesforce
                         Training
                         Online?</a>
-                        <svg class="bi bi-chevron-down me-3 svg-pointer drop-icon" fill="currentColor" height="16"
+                        <svg class="bi bi-chevron-down me-3 svg-pointer drop-icon drop-icon" fill="currentColor" height="16"
                              viewBox="0 0 16 16"
                              width="16" xmlns="http://www.w3.org/2000/svg">
                             <path d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708"
@@ -275,7 +275,7 @@
                     <li class="d-flex align-items-center"><a class="dropdown-item rounded-0 p-2 fw-medium" >Why
                         should you take the Salesforce
                         Certifications?</a>
-                        <svg class="bi bi-chevron-down me-3 svg-pointer drop-icon" fill="currentColor" height="16"
+                        <svg class="bi bi-chevron-down me-3 svg-pointer drop-icon drop-icon" fill="currentColor" height="16"
                              viewBox="0 0 16 16"
                              width="16" xmlns="http://www.w3.org/2000/svg">
                             <path d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708"
@@ -299,7 +299,7 @@
                     <li class="d-flex align-items-center"><a class="dropdown-item rounded-0 p-2 fw-medium">How
                         to get certified in
                         Salesforce?</a>
-                        <svg class="bi bi-chevron-down me-3 svg-pointer drop-icon" fill="currentColor" height="16"
+                        <svg class="bi bi-chevron-down me-3 svg-pointer drop-icon drop-icon" fill="currentColor" height="16"
                              viewBox="0 0 16 16"
                              width="16" xmlns="http://www.w3.org/2000/svg">
                             <path d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708"
@@ -472,7 +472,7 @@
                     data-bs-theme="light">
                     <li class="d-flex align-items-center"><a class="dropdown-item rounded-0 p-2 fw-medium">Why should I
                         learn Salesforce from iLearnings?</a>
-                        <svg class="bi bi-chevron-down me-3 svg-pointer" fill="currentColor" height="16"
+                        <svg class="bi bi-chevron-down me-3 svg-pointer drop-icon drop-icon" fill="currentColor" height="16"
                              viewBox="0 0 16 16"
                              width="16" xmlns="http://www.w3.org/2000/svg">
                             <path d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708"
@@ -499,7 +499,7 @@
                     </li>
                     <li class="d-flex align-items-center"><a class="dropdown-item rounded-0 p-2 fw-medium">What are the
                         other courses iLearning offers in the domain of Salesforce?</a>
-                        <svg class="bi bi-chevron-down me-3 svg-pointer" fill="currentColor" height="16"
+                        <svg class="bi bi-chevron-down me-3 svg-pointer drop-icon" fill="currentColor" height="16"
                              viewBox="0 0 16 16"
                              width="16" xmlns="http://www.w3.org/2000/svg">
                             <path d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708"
@@ -518,7 +518,7 @@
                     <li class="d-flex align-items-center"><a class="dropdown-item rounded-0 p-2 fw-medium"> What is
                         Salesforce?
                     </a>
-                        <svg class="bi bi-chevron-down me-3 svg-pointer" fill="currentColor" height="16"
+                        <svg class="bi bi-chevron-down me-3 svg-pointer drop-icon" fill="currentColor" height="16"
                              viewBox="0 0 16 16"
                              width="16" xmlns="http://www.w3.org/2000/svg">
                             <path d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708"
@@ -540,7 +540,7 @@
                         are the different types of job positions available after iLearning’s Salesforce Certification
                         Training Course?</a>
 
-                        <svg class="bi bi-chevron-down me-3 svg-pointer" fill="currentColor" height="16"
+                        <svg class="bi bi-chevron-down me-3 svg-pointer drop-icon" fill="currentColor" height="16"
                              viewBox="0 0 16 16"
                              width="16" xmlns="http://www.w3.org/2000/svg">
                             <path d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708"
@@ -563,7 +563,7 @@
                     <li class="d-flex align-items-center"><a class="dropdown-item rounded-0 p-2 fw-medium">What
                         qualifications are necessary to become a Salesforce Certified administrator and app builder?</a>
 
-                        <svg class="bi bi-chevron-down me-3 svg-pointer" fill="currentColor" height="16"
+                        <svg class="bi bi-chevron-down me-3 svg-pointer drop-icon" fill="currentColor" height="16"
                              viewBox="0 0 16 16"
                              width="16" xmlns="http://www.w3.org/2000/svg">
                             <path d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708"
@@ -588,7 +588,7 @@
                         are the different types of job positions available after iLearning’s Salesforce Certification
                         Training Course?</a>
 
-                        <svg class="bi bi-chevron-down me-3 svg-pointer" fill="currentColor" height="16"
+                        <svg class="bi bi-chevron-down me-3 svg-pointer drop-icon" fill="currentColor" height="16"
                              viewBox="0 0 16 16"
                              width="16" xmlns="http://www.w3.org/2000/svg">
                             <path d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708"
@@ -596,19 +596,12 @@
                         </svg>
                     </li>
                 
-                    <li class="drop-info p-2">
-                        <p class="dropdown-p p-2 py-0">Below are some of the popular job roles for this CRM tool:<br>
-                            • Salesforce admin<br>
-                            • Salesforce developer<br>
-                            • Salesforce sales executive<br>
-                            • Salesforce marketing specialist and Salesforce consultant<br></p>
-                    </li>
-                    <li>
+
                         <hr class="dropdown-divider">
                     </li>
                     <li class="d-flex align-items-center"><a class="dropdown-item rounded-0 p-2 fw-medium">What
                         are the top companies hiring Salesforce developers?</a>
-                        <svg class="bi bi-chevron-down me-3 svg-pointer" fill="currentColor" height="16"
+                        <svg class="bi bi-chevron-down me-3 svg-pointer drop-icon" fill="currentColor" height="16"
                              viewBox="0 0 16 16"
                              width="16" xmlns="http://www.w3.org/2000/svg">
                             <path d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708"
@@ -616,7 +609,7 @@
                         </svg>
                     </li>
                 
-                    <li class="drop-info p-2 p-2 py-0">
+                    <li class="drop-info p-2 py-0">
                         <p class="dropdown-p p-0">
                             Some of the top companies that hire Salesforce developers are TCS, Accenture, Cognizant,
                             Capgemini, Infosys, Salesforce, Deloitte, etc.</p>
@@ -626,7 +619,7 @@
                     </li>
                     <li class="d-flex align-items-center"><a class="dropdown-item rounded-0 p-2 fw-medium">What
                         if I miss a class?</a>
-                        <svg class="bi bi-chevron-down me-3 svg-pointer" fill="currentColor" height="16"
+                        <svg class="bi bi-chevron-down me-3 svg-pointer drop-icon" fill="currentColor" height="16"
                              viewBox="0 0 16 16"
                              width="16" xmlns="http://www.w3.org/2000/svg">
                             <path d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708"
