--- a/index.html
+++ b/index.html
@@ -578,7 +578,9 @@
             </ul>
           </div>
         </div>
-        <div class="overview-left"></div>
+        <div class="overview-left">
+            hi
+        </div>
       </div>
       <!--who can enroll in course-->
       <div class="container my-5">
