--- a/index.html
+++ b/index.html
@@ -755,7 +755,7 @@
                     </h5>
                     <p class="pe-2 ps-3">
                         In this project, you will keep track of the inventory and
-                        product purchases in real- time to keep products well-stocked.
+                        product purchases in real - time to keep products well-stocked.
                         Key points in the project are tracking customer information,
                         updating inventory, and keeping track of sold products.
                     </p>
@@ -829,7 +829,7 @@
                                 iLearning’s Salesforce Certification Training Course offers a
                                 comprehensive learning approach for mastering developer and
                                 administrator skills in Salesforce. As part of the training,
-                                you will learn the fundamentals, Visualforce, Apex language,
+                                you will learn the fundamentals, Visual-force, Apex language,
                                 dashboard, process automation, and more. The entire program is
                                 in line with Salesforce Developer Certification exams. You
                                 will be working on real-time projects and assignments that
