--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     </header>
 
     <!--hero -->
-    <div class="container col-xxl-8 px-4 py-5">
+    <div class="container col-xxl-8 px-4 py-5" id="certification">
         <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
             <div class="col-10 col-sm-8 col-lg-6">
                 <img
@@ -325,7 +325,7 @@
                         class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0"
                 >
                     <li>
-                        <a class="nav-link px-1 roboto-regular text-dark" href="#"
+                        <a class="nav-link px-1 roboto-regular text-dark" href="#overview"
                         >Overview</a
                         >
                     </li>
@@ -340,7 +340,7 @@
                         >
                     </li>
                     <li>
-                        <a class="nav-link mx-1 px-1 roboto-regular text-dark" href="#"
+                        <a class="nav-link mx-1 px-1 roboto-regular text-dark" href="#certification"
                         >Certification</a
                         >
                     </li>
@@ -350,7 +350,7 @@
                         >
                     </li>
                     <li>
-                        <a class="nav-link mx-1 px-1 roboto-regular text-dark" href="#"
+                        <a class="nav-link mx-1 px-1 roboto-regular text-dark" href="#faq"
                         >FAQs</a
                         >
                     </li>
@@ -365,7 +365,7 @@
     </div>
 
     <!-- overview -->
-    <div class="container px-4 py-4 overview">
+    <div class="container px-4 py-4 overview" id="overview">
         <div class="overview-Right">
             <h1 class="mb-4">
                 Salesforce Certification Training Course
@@ -792,7 +792,7 @@
 
     <!-- FAQ -->
     <div class="container px-4 py-5">
-        <div class="faq p-1">
+        <div class="faq p-1" id="faq">
             <div class="faq-left">
                 <h1 class="mb-4">
                     Salesforce Training Course <span class="text">FAQs</span>
