--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
 
     <!--    navigator-->
     <div class="p-3 pb-0 text-g-dark text-dark">
-        <div class="container">
+        <div class="container" id="navigator">
             <div
                     class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-center"
             >
@@ -322,7 +322,7 @@
                 </a>
 
                 <ul
-                        class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0"
+                        class="nav col-12 col-lg-auto me-lg-auto mb-2 mt-4 justify-content-center mb-md-0"
                 >
                     <li>
                         <a class="nav-link px-1 roboto-regular text-dark" href="#overview"
@@ -335,8 +335,8 @@
                         >
                     </li>
                     <li>
-                        <a class="nav-link mx-1 px-1 roboto-regular text-dark" href="#"
-                        >Curriculums</a
+                        <a class="nav-link mx-1 px-1 roboto-regular text-dark" href="#contact-us"
+                        >Contact US</a
                         >
                     </li>
                     <li>
@@ -1039,7 +1039,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="faq-right p-0 mt-lg-4">
+            <div class="faq-right p-0 mt-lg-4" id="contact-us">
                 <div class="mt-0 p-0">
                     <img alt="image" height="150vh" src="./assets/Talk%20To%20Us.png" width="auto">
                 </div>
