--- a/index.html
+++ b/index.html
@@ -310,22 +310,22 @@
     </div>
 
     <!--    navigator-->
-    <div class="p-3 pb-0 text-g-dark text-dark">
-        <div class="container" id="navigator">
+    <div class="text-g-dark text-dark navigator">
+        <div class="container navigator-box">
             <div
                     class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-center"
             >
                 <a
-                        class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none"
+                        class="d-flex align-items-center mb-2 text-white text-decoration-none"
                         href="/"
                 >
                 </a>
 
                 <ul
-                        class="nav col-12 col-lg-auto me-lg-auto mb-2 mt-4 justify-content-center mb-md-0"
+                        class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0"
                 >
                     <li>
-                        <a class="nav-link px-1 roboto-regular text-dark" href="#overview"
+                        <a class="nav-link mx-1 px-1 roboto-regular text-dark" href="#overview"
                         >Overview</a
                         >
                     </li>
@@ -698,7 +698,7 @@
     </div>
 
     <!--    project-->
-    <div class="container px-4 py-5" id="hanging-icons">
+    <div class="container px-4 py-3" id="hanging-icons">
         <h2 class="pb-2">Salesforce <span class="text">Projects</span></h2>
         <div class="projects">
             <div class="ms-4 border-end">
@@ -791,8 +791,8 @@
     </div>
 
     <!-- FAQ -->
-    <div class="container px-4 py-5">
-        <div class="faq p-1" id="faq">
+    <div class="container px-4 py-2 mb-5" id="faq">
+        <div class="faq p-0">
             <div class="faq-left">
                 <h1 class="mb-4">
                     Salesforce Training Course <span class="text">FAQs</span>
