--- a/index.html
+++ b/index.html
@@ -698,7 +698,7 @@
     </div>
 
     <!--    project-->
-    <div class="container px-4 py-3" id="hanging-icons">
+    <div class="container px-4 py-3 mt-lg-5" id="hanging-icons">
         <h2 class="pb-2">Salesforce <span class="text">Projects</span></h2>
         <div class="projects">
             <div class="ms-4 border-end">
