--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     </div>
 
     <!--    key features-->
-    <div class="container px-3 py-4 keyFeature skill" id="icon-grid">
+    <div class="container px-3 py-4 keyFeature key-skill" id="icon-grid">
         <h3 class="pb-1">Key <span class="fw-bold">Highlights</span></h3>
         <div
                 class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-4 py-5"
@@ -310,7 +310,7 @@
     </div>
 
     <!--    navigator-->
-    <div class="text-g-dark text-dark navigator">
+    <div class="text-g-dark text-dark navigator ">
         <div class="container navigator-box">
             <div
                     class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-center"
